# tar-core

./: Cargo.toml
fuzz/: Cargo.toml
src/: lib.rs  parse.rs
