[package]
name = "tar-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Separate workspace from the parent — required by cargo-fuzz.
[workspace]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
rand = { version = "0.10", features = ["small_rng"] }
tar = "0.4"

[dependencies.tar-core]
path = ".."

[dependencies.tar-core-testutil]
path = "../testutil"

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generate-corpus"
path = "generate_corpus.rs"
